Prevent phantom scrollbar from appearing on the Dance genres

--- a/css/style.css
+++ b/css/style.css
@@ -214,6 +214,10 @@ h1 {
     height: 23%;
 }
 
+.dance {
+    overflow: hidden;
+}
+
 /*---------------------------------------------------------------------------*/
 
 .genre {
